--- a/iframe.html
+++ b/iframe.html
@@ -5,36 +5,20 @@
     <meta charset="UTF-8">
     <title>Document</title>
 
-    <style>
-
-        .wrapper {
-            height: 600px;
-            overflow: auto;
-            -webkit-overflow-scrolling:touch;
-        }
-        
+    <style>        
         .content {
-            width: 470px;
+            width: 400px;
             height: 1600px;
-            /*height: 400px;*/
             border: 1px solid green;
-            /*position: absolute;*/
+            background-color: green;
         }
     </style>
 </head>
 
 <body>
-    <!--<div class="wrapper">
-        <div class="content">
-
-        </div>
-    </div>-->
-
     <div class="content">
 
-        </div>
-
-
+    </div>
 </body>
 
 </html>
