--- a/index.html
+++ b/index.html
@@ -3,18 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>ios iframe srcoll</title>
 
     <style>
         .warpper {
             overflow: auto;
             -webkit-overflow-scrolling: touch;
-            
             width: 500px;
             height: 500px;
             margin: 100px auto;
             border: 1px solid red;
-            background-color: red;
         }
         
         iframe {
